modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-dialog.less
.issue-dialog {
  max-height: none;
  @toggler-width: 35px;

  .dialog-content {
    max-height: 60vh;
    overflow-y: auto;

    .issue-dialog-form {
      margin: 0px 0px;
      padding: 0 !important;
    }

    .content-combo-box {
      .selected-options {
        display: none;
      }
    }

    .principal-selected-options-view {
      padding: 0 15px 0 0;
    }

    .publish-dialog-item-list {

      max-height: none;

      .browse-selection-item {

        .status {
          line-height: 32px;
          white-space: nowrap;
        }
      }

      &.contains-toggleable {

        .browse-selection-item:not(.toggleable) {
          margin-left: @toggler-width;
        }

        .include-children-toggler {
          cursor: pointer;
          &.readonly{
            cursor: default;
          }
          &:hover {
            &:before {
              color: @admin-font-gray2;
            }
            &.on {
              &:before {
                color: @admin-button-blue1;
              }
            }
          }
        }
      }
    }
  }

  .button-container {

    width: 100%;
    box-sizing: border-box;

    .back-action {
      float: left;
    }

    .create-issue-action {
      float: right;
    }
  }

  @media screen and (max-height: 720px) {
    .dialog-content {
      max-height: 450px;
    }
  }
}

